--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="COVID-19 tracker developed by Mayuresh Kutte"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link href="https://fonts.googleapis.com/css2?family=Calistoga&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Covid-19 Live Status</title>
